# nbody-tool

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
demo/: CMakeLists.txt  nbt_demo_2d.cpp
demo/data/: data_format.md  generate_2d.py
demo/data/2d/: solarsystem_uniform_10  solarsystem_uniform_10.data  solarsystem_uniform_100  stars_uniform_100.data  stars_uniform_10k  stars_uniform_1k  stars_uniform_1k.data
doc/html/: _integrator_8hpp.html  _integrator_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_abstract___barnes_hut-members.html  class_abstract___barnes_hut.html  class_abstract___barnes_hut.js  class_abstract___direct-members.html  class_abstract___direct.html  class_abstract___direct.js  class_dynamics_engine-members.html  class_dynamics_engine.html  class_dynamics_engine.js  class_euler_integrator-members.html  class_euler_integrator.html  class_euler_integrator.js  class_force_computer-members.html  class_force_computer.html  class_force_computer.js  class_gravitational___barnes_hut-members.html  class_gravitational___barnes_hut.html  class_gravitational___barnes_hut.js  class_gravitational___direct-members.html  class_gravitational___direct.html  class_gravitational___direct.js  class_integrator-members.html  class_integrator.html  class_integrator.js  class_quadtree.html  class_runge_kutta_integrator-members.html  class_runge_kutta_integrator.html  class_runge_kutta_integrator.js  class_simulator-members.html  class_simulator.html  class_simulator.js  class_simulator2d-members.html  class_simulator2d.html  class_simulator2d.js  class_verlet_integrator-members.html  (+58 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  files_3.js  files_4.js  (+35 more)
include/: Integrator.hpp  Octree.hpp  Rigidbody.hpp  Simulator.hpp  dynamics_engine.hpp  force_computer.hpp  forces.hpp  goal.txt  integrator.hpp  nbodytool.hpp  octree.hpp  precision_test.cpp  simulator.hpp  simulator2d.hpp  units.hpp
include/struct/: octree.hpp  quadtree.hpp  rigidbody.hpp
src/: CMakeLists.txt  Octree.cpp
src/cpu/: dynamics_engine.cpp  force_computer.cpp  integrator.cpp  octree.cpp  simulator.cpp  simulator2d.cpp
src/cpu/struct/: rigidbody.cpp
test/: CMakeLists.txt  benchmark.cpp  main.cpp  octree.cpp  simulator.cpp
